infrastructure/kubernetes/gatekeeper/templates/allowed-repos-template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8sallowedrepos
spec:
  crd:
    spec:
      names:
        kind: K8sAllowedRepos
      validation:
        openAPIV3Schema:
          properties:
            parameters:
              type: object
              properties:
                repos:
                  type: array
                  items:
                    type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sallowedrepos

        violation[{"msg": msg}] {
          image := input.review.object.spec.template.spec.containers[_].image
          allowed := {r | r := input.parameters.repos[_]}
          not startswith_any(image, allowed)
          msg := sprintf("image %v is not from an allowed repo", [image])
        }

        startswith_any(s, set) {
          some x
          x := set[_]
          startswith(s, x)
        }
